[project]
name = "simplegraphs"
version = "0.1.0"
description = "Simple graph algorithms"
authors = [
    {name = "singularitti", email = "singularitti@outlook.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
