[project]
name = "simplegraphs"
version = "0.1.0"
description = "Simple graph algorithms"
authors = [
    {name = "singularitti", email = "singularitti@outlook.com"},
]
dependencies = [
    "networkx>=3.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
